# University

./: .gitignore  CMakeLists.txt  README.md  calc_factorial.psc  calculator.psc  ismael.psc  primes_in_range.psc
c/: sapo.c
c/certamen_final/: ej1.c  ej2.c  ej3.c
c/s2/: matrices.c
c/s2/tests/: sopa.c  test2.c
c/trabajo_opcional/: problema1.c  problema2.c  problema4.c
other/: pairs.c
other/test2/: 1.c  2.c  3.c
pseint/s1/: arbitrary.psc  calculator.psc  primes_in_range.psc
s1/: frog.c
s2/projects/: cinema.c
s3/diagnosis/: diagnosis1.c
semester1/optional/: optional3.c
semester2/exercises/: matrices.c
semester2/projects/: cinema.c
src/cl/bgmp/certamen1/: Certamen1.java  Lista.java  Nodo.java
